--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "engines": {
+    "node": "16.14.1",
+    "npm": "8.5.0"
   }
 }
