--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desk-booking-app",
   "version": "0.0.0",
   "scripts": {
+    "start-locally": "ng serve",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
