--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-locally": "ng serve",
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --configuration=\"development\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "postinstall": "ng build --prod"
