--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start-locally": "ng serve",
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --configuration=\"development\"",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ng build --prod"
+    "postinstall": "ng build --configuration=\"production\""
   },
   "private": true,
   "dependencies": {
