--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
+              //"node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
             ],
             "scripts": []
           },
