--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/Web.config"
+            ],
             "styles": [
               "src/styles.scss"
               //"node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
