--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/Web.Config"],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
