--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "express": "^4.17.3",
+    "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
