--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.scss"
-              //"node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
+              "src/styles.scss",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "scripts": []
           },
@@ -104,10 +104,7 @@
     }
   },
   "stylePreprocessorOptions": {
-    "includePaths": [
-      "node_modules",
-      "src/assets/styles"
-    ]
+    "includePaths": ["node_modules", "src/assets/styles"]
   },
   "defaultProject": "desk-booking-app"
 }
